--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,13 @@
-canvas#canvas {
+canvas {
     image-rendering: optimizeSpeed;             /* Older versions of FF */
     image-rendering: -moz-crisp-edges;              /* FF 6.0+ */
     image-rendering: -webkit-optimize-contrast;     /* Webkit (non standard naming) */
     image-rendering: -o-crisp-edges;                /* OS X & Windows Opera (12.02+) */
     image-rendering: crisp-edges;                   /* Possible future browsers. */
     -ms-interpolation-mode: nearest-neighbor;       /* IE (non standard naming) */
+}
+canvas#preload {
+    position: absolute;
+    top: -1280px;
+    left: -720px;
 }
